--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
 
   </div><!-- .wrapper -->
-  <audio id="player1">
+  <audio id="player1" controls>
     <source src="audio/purrr.mp3" type="audio/mp3">
     <source src="audio/purrr.ogg" type="audio/ogg">
   </audio>
